# barp

./: .pre-commit-config.yaml  .ruff.toml  Cargo.toml  README.md  pyproject.toml  requirements-dev.txt
docs/: definitions.md
docs/examples/arg_refs/: command.cfg  echo.cfg
docs/examples/barp.d/arg_builders/: docker.lua
docs/examples/barp.d/profiles/: common.cfg  docker.cfg  kubernetes.cfg  local.cfg
docs/examples/barp.d/task_templates/: command.cfg  docker.cfg  stdin.cfg
docs/examples/plugins/barp_example_executors/: pyproject.toml
docs/examples/plugins/barp_example_executors/barp_example_executors/executors/system_command/: docker_executor.py  kubernetes_executor.py
docs/examples/plugins/barp_example_executors/barp_example_executors/types/: models.py  profile.py
docs/examples/plugins/barp_example_executors/barp_example_executors/types/environments/: local.py
docs/examples/plugins/event_listeners/: pyproject.toml
docs/examples/plugins/event_listeners/example_listener/: pyproject.toml  task_pre_execute.py
docs/examples/plugins/event_listeners/example_listener/example_listener/: task_pre_execute.py  task_time_logger.py
docs/manuials/: event_listeners.md
src/: arg_builders.rs  main.rs  serialization.rs  system.rs  yaml.rs
src/arg_builders/: command.rs  mod.rs
src/barp/: initializer.py  models.py  reflection.py  system.py
src/barp/cli/: main.py
src/barp/cli/commands/: run.py
src/barp/events/: event_dispatcher.py
src/barp/events/listeners/: base.py
src/barp/executors/: base.py  factory.py  local.py
src/barp/executors/docker/: docker_command.py
src/barp/executors/local/: local_command.py
src/barp/executors/system_command/: docker_executor.py  kubernetes_executor.py  local_executor.py
src/barp/operations/: decorators.py  run.py
src/barp/task_template_resolvers/: base.py  factory.py  file.py  stdin.py
src/barp/types/: profile.py
src/barp/types/environments/: base.py  docker.py  kubernetes.py
src/barp/types/events/: base.py  execute.py  post_execute.py  pre_execute.py
src/barp/types/tasks/: base.py  command.py  docker.py  system_command.py
src/cli/: mod.rs  run.rs
src/runners/: command.rs  mod.rs
src/types/: arg_ref.rs  mod.rs  process_params.rs  task_args.rs  task_config.rs
tests/functional/: README.md  _runner.sh  run_me.sh
