[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "barp"
version = "0.0.1"
authors = [
  { name="Ignytis", email="155588001+ignytis@users.noreply.github.com" },
]
description = "Build Arguments, Launch Process. A process launcher tool"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "pydantic==2.11.*",
]

[project.optional-dependencies]
cli = [ # command-line interface
  "click>=8.1.8,<9.0.0",
]
runtime = [ # execution of tasks
  "configtpl~=1.0.0",
]

[project.scripts]
barp = "barp.cli.main:cmd_group_main"

[project.entry-points."barp.types.environments"]
local = "barp.types.environments.local:LocalEnvironment"

[project.entry-points."barp.types.task_templates"]
command = "barp.types.tasks.command:CommandTaskTemplate"

[project.entry-points."barp.executors"]
local = "barp.executors.local:LocalExecutor"


[project.urls]
Homepage = "https://github.com/ignytis/barp"

[tool.hatch.build]
only-packages = true

[tool.hatch.build.targets.wheel]
packages = ["src/barp"]
