[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "barp"
version = "0.0.1"
authors = [
  { name="Ignytis", email="155588001+ignytis@users.noreply.github.com" },
]
description = "Build Arguments, Launch Process. A process launcher tool"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "pydantic==2.11.*",
]

[project.optional-dependencies]
cli = [ # command-line interface
  "click>=8.1.8,<9.0.0",
]
dev = [ # dependencies for Barp development
  "ruff==0.12.*",
  "pre_commit==4.2.*",

]
env_docker = ["docker>=7.1.0,<8.0.0"] # support for Docker environment
env_kubernetes = ["kubernetes>=31.0.0,<34.0.0"] # support for Kubernetes environment
runtime = [ # execution of tasks
  "configtpl~=1.0.0",
]

[project.scripts]
barp = "barp.cli.main:cmd_group_main"

[project.entry-points."barp.types.environments"]
docker = "barp.types.environments.docker:DockerEnvironment"
kubernetes = "barp.types.environments.kubernetes:KubernetesEnvironment"
local = "barp.types.environments.local:LocalEnvironment"

[project.entry-points."barp.types.task_templates"]
system_command = "barp.types.tasks.system_command:SystemCommandTaskTemplate"

[project.entry-points."barp.executors"]
system_command_docker = "barp.executors.system_command.docker_executor:DockerExecutor"
system_command_kubernetes = "barp.executors.system_command.kubernetes_executor:KubernetesExecutor"
system_command_local = "barp.executors.system_command.local_executor:LocalExecutor"


[project.urls]
Homepage = "https://github.com/ignytis/barp"

[tool.hatch.build]
only-packages = true

[tool.hatch.build.targets.wheel]
packages = ["src/barp"]
