[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "barp"
version = "0.0.1"
authors = [
  { name="Ignytis", email="155588001+ignytis@users.noreply.github.com" },
]
description = "Build Arguments, Launch Process. A process launcher tool"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# Base dependencies are not sufficient for task execution.
# Please install the 'runtime' extra to execute tasks and 'cli' extra to run tasks using command line.\
# The basic installation with no extras could be used to define types in plugins
dependencies = [
  "pydantic==2.11.*",
]

[project.optional-dependencies]
cli = [ # command-line interface
  "click>=8.1.8,<9.0.0",
]

dev = [ # dependencies for Barp development
  "hatch>=1.16.0,<1.17.0",
  # NB: keep it the same as in pre-commit-config.yaml
  "ruff==0.14.3",
  "pytest",
  "pre_commit",
]

runtime = [ # execution of tasks
  "configtpl~=3.0.0",
]

[project.scripts]
barp = "barp.cli.main:cmd_group_main"

[project.entry-points."barp.types.environments"]
local = "barp.types.environments.local:LocalEnvironment"

[project.entry-points."barp.types.task_templates"]
system_command = "barp.types.tasks.system_command:SystemCommandTaskTemplate"

[project.entry-points."barp.executors"]
system_command_local = "barp.executors.system_command.local_executor:LocalExecutor"

[project.entry-points."barp.task_template_resolvers"]
file = "barp.task_template_resolvers.file:FileTaskTemplateResolver"
stdin = "barp.task_template_resolvers.stdin:StdinTaskTemplateResolver"

[project.urls]
Homepage = "https://github.com/ignytis/barp"

[tool.hatch.build]
only-packages = true

[tool.hatch.build.targets.wheel]
packages = ["src/barp"]
