[project]
name = "example_listener"
version = "0.0.1"
description = "An example of event listener plugin"
requires-python = ">=3.13"

dependencies = [
  "barp",
]


[project.entry-points."barp.event_listeners"]
pre_exec = "example_listener.task_pre_execute:PreExecuteEventListener"
pre_exec_logger = "example_listener.task_time_logger:PreExecuteEventListener"
post_exec_logger = "example_listener.task_time_logger:PostExecuteEventListener"